--- a/DB planes/DB planes.csproj
+++ b/DB planes/DB planes.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -35,6 +50,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,6 +62,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="my_orders_form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="my_orders_form.Designer.cs">
+      <DependentUpon>my_orders_form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="tickets_order_form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="tickets_order_form.Designer.cs">
+      <DependentUpon>tickets_order_form.cs</DependentUpon>
+    </Compile>
     <Compile Include="Menu_form.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +106,9 @@
     <EmbeddedResource Include="log_in_form.resx">
       <DependentUpon>log_in_form.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="my_orders_form.resx">
+      <DependentUpon>my_orders_form.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Registration_form.resx">
       <DependentUpon>Registration_form.cs</DependentUpon>
     </EmbeddedResource>
@@ -94,6 +125,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="tickets_order_form.resx">
+      <DependentUpon>tickets_order_form.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -112,6 +146,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Sad_airlines.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
