--- a/DB planes/DB planes.csproj
+++ b/DB planes/DB planes.csproj
@@ -62,12 +62,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="my_orders_form.cs">
+    <Compile Include="Flights.cs" />
+    <Compile Include="Liners.cs" />
+    <Compile Include="FlightsForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="my_orders_form.Designer.cs">
-      <DependentUpon>my_orders_form.cs</DependentUpon>
+    <Compile Include="FlightsForm.Designer.cs">
+      <DependentUpon>FlightsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Sales.cs" />
     <Compile Include="tickets_order_form.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -100,14 +103,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User.cs" />
     <EmbeddedResource Include="Menu_form.resx">
       <DependentUpon>Menu_form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="log_in_form.resx">
       <DependentUpon>log_in_form.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="my_orders_form.resx">
-      <DependentUpon>my_orders_form.cs</DependentUpon>
+    <EmbeddedResource Include="FlightsForm.resx">
+      <DependentUpon>FlightsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Registration_form.resx">
       <DependentUpon>Registration_form.cs</DependentUpon>
