--- a/DB planes/DB planes.csproj
+++ b/DB planes/DB planes.csproj
@@ -70,6 +70,12 @@
     <Compile Include="FlightsForm.Designer.cs">
       <DependentUpon>FlightsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="My_Tickets_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="My_Tickets_Form.Designer.cs">
+      <DependentUpon>My_Tickets_Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="Sales.cs" />
     <Compile Include="tickets_order_form.cs">
       <SubType>Form</SubType>
