--- a/DB planes/DB planes.csproj
+++ b/DB planes/DB planes.csproj
@@ -62,6 +62,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminMenu.Designer.cs">
+      <DependentUpon>AdminMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Flights.cs" />
     <Compile Include="Liners.cs" />
     <Compile Include="FlightsForm.cs">
@@ -69,6 +75,12 @@
     </Compile>
     <Compile Include="FlightsForm.Designer.cs">
       <DependentUpon>FlightsForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LinersForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LinersForm.Designer.cs">
+      <DependentUpon>LinersForm.cs</DependentUpon>
     </Compile>
     <Compile Include="My_Tickets_Form.cs">
       <SubType>Form</SubType>
@@ -110,6 +122,18 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
+    <Compile Include="UsersForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UsersForm.Designer.cs">
+      <DependentUpon>UsersForm.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="AdminMenu.resx">
+      <DependentUpon>AdminMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LinersForm.resx">
+      <DependentUpon>LinersForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Menu_form.resx">
       <DependentUpon>Menu_form.cs</DependentUpon>
     </EmbeddedResource>
@@ -118,6 +142,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FlightsForm.resx">
       <DependentUpon>FlightsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="My_Tickets_Form.resx">
+      <DependentUpon>My_Tickets_Form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Registration_form.resx">
       <DependentUpon>Registration_form.cs</DependentUpon>
@@ -137,6 +164,9 @@
     </Compile>
     <EmbeddedResource Include="tickets_order_form.resx">
       <DependentUpon>tickets_order_form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UsersForm.resx">
+      <DependentUpon>UsersForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
